<resources>
    <string name="app_name">client</string>
    <string name="simpleCrud">SIMPLE CRUD</string>
    <string name="add">ADD</string>
    <string name="getAll">GET ALL</string>
    <string name="getByEmail">GET BY EMAIL</string>
    <string name="updateAge">UPDATE AGE</string>
    <string name="deleteByEmail">DELETE BY EMAIL</string>
    <string name="deleteAll">DELETE ALL</string>

    <!-- AddUserActivity -->
    <string name="addUser">Add user</string>
    <string name="firstName">first name</string>
    <string name="lastName">last name</string>
    <string name="email">email@example.com</string>
    <string name="age">age</string>

    <!-- UpdateAgeLayout -->
    <string name="usersEmail">users email</string>
    <string name="newAge">new age</string>
</resources>
