<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="180dp"
            android:layout_height="36dp"
            android:text="@string/simpleCrud"
            android:textColor="#333745"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.13"/>

    <Button
            android:text="@string/add"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteY="16dp"
            tools:layout_editor_absoluteX="157dp"
            android:id="@+id/addBtn"
            android:onClick="navigateToAddUserActivity"
            android:background="#49CC90"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.23"/>

    <Button
            android:text="@string/getAll"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteY="16dp"
            tools:layout_editor_absoluteX="157dp"
            android:id="@+id/getAllBtn"
            android:onClick="getAll"
            android:background="#61AFFE"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.33"/>

    <Button
            android:text="@string/getByEmail"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteY="16dp"
            tools:layout_editor_absoluteX="157dp"
            android:id="@+id/getByEmailBtn"
            android:onClick="getByEmail"
            android:background="#61AFFE"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.43"/>

    <Button
            android:text="@string/updateAge"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteY="16dp"
            tools:layout_editor_absoluteX="157dp"
            android:id="@+id/updateAgeBtn"
            android:onClick="navigateToUpdateAgeActivity"
            android:background="#FCA130"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.53"/>

    <Button
            android:text="@string/deleteByEmail"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteY="16dp"
            tools:layout_editor_absoluteX="157dp"
            android:id="@+id/deleteByEmailBtn"
            android:onClick="deleteByEmail"
            android:background="#F93E3E"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.63"/>

    <Button
            android:text="@string/deleteAll"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteY="16dp"
            tools:layout_editor_absoluteX="157dp"
            android:id="@+id/deleteAllBtn"
            android:onClick="deleteAll"
            android:background="#F93E3E"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.73"/>

</androidx.constraintlayout.widget.ConstraintLayout>